# clip-extract

./: README.md  pyproject.toml
clip_extract/: model.ipynb
clip_extract/utils/: _validation.py  config.json
